[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing = { version = "0.1", features = ["log"] }
actix-web = "4"
reqwest = "0.11.23"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]