[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
validator = "0.18"
unicode-segmentation = "1"
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing = { version = "0.1", features = ["log"] }
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
rand = { version = "0.8", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7"
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"